== Version 0.47 ??/??/???? ==

* Added an in-game copy of the changelog, to be displayed when an upgrade is detected, or when the used types '<code>/qh changes</code>'.
* Made some changes to the quest tracker:
** Option to add quest levels to quest names: <code>/qh tlevel</code>
** Option to colour quest names by their difficulty: <code>/qh tqcol</code>
** Option to colour objectives by their progress: <code>/qh tocol</code>
** Option to scale the quest tracker: <code>/qh tscale</code>
** The above options were also added to the settings menu.
** Added a small button to quickly minimize or restore the quest tracker. This isn't the same as hiding the quest tracker, which will hide that button as well and restore the original.
** Hiding QuestHelper will also hide the quest tracker.
** Note: The quest tracker doesn't currently honour your list of watched quests, nor move quests that have recently had progress made to them to the top of the list, but I intend to do have it do this in a future release.
* Fixed a bug with objective icons inheriting their alpha value from the map frame, which Cartographer can hide.
* Fixed a bug in routing, was caching the objective locations.
* QuestHelper won't try to track objectives for failed quests.
* Includes a submitted Russian translation.

== Version 0.46 05/14/2008 ==

* Replaced the COPPER, SILVER, and GOLD strings that Blizzard renamed.
* Added a replacement for the built in quest tracker that automatically populates itself and sorts itself to reflect QuestHelper's route.
** It only includes your own quests and objectives.
** Right click on a quest name to open that quest in your questlog.
** It can't be configured and you can't manually add or remove quests from it.
** You may disable it and restore the built in quest tracker by typing '<code>/qh track</code>'.
* Added objective information to the tooltips of items and monsters.
** They include information on the progress of party members also using QuestHelper.